# manage-fastapi

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  404.html  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  templates.py  utils.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  docs.yml  test.yml
docs/: index.md  mkdocs.yml  release-notes.md
docs/docs/: index.md  release-notes.md
docs/managing_apps/: startapp.md
docs/managing_models/: showmodels.md
docs/managing_projects/: startproject.md
examples/: README.md
examples/leaderboard/: Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
examples/leaderboard/app/: database.py  main.py
examples/leaderboard/app/api/v1/: crud.py
examples/leaderboard/app/core/: config.py
examples/leaderboard/app/core/models/: model.py
haha/: Dockerfile  LICENSE  README.md  setup.cfg
haha/app/: main.py
haha/app/core/: config.py
init_fastapi/: constants.py  context.py  generator.py  helpers.py  main.py
init_fastapi/templates/project/: cookiecutter.json
init_fastapi/templates/project/hooks/: post_gen_project.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  {{ cookiecutter.env }}  {{ cookiecutter.gitignore }}
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/: database.py  main.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/api/: router.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/core/: config.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/models/attributes/: health.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/models/domains/: health.py
init_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/models/schemas/: health.py
manage-fastapi/: main.py  requirements.txt  templates.py  utils.py
manage-fastapi/project/: settings.py
manage-fastapi/project/models/: database.py
manage-fastapi/project/schemas/: schema.py
manage_fastapi/: __main__.py  config.py  constants.py  context.py  generator.py  helpers.py  main.py  models_utils.py  project_utils.py  schemas.py  templates.py  utils.py
manage_fastapi/templates/app/: cookiecutter.json
manage_fastapi/templates/app/{{ cookiecutter.folder_name }}/api/: v1.py
manage_fastapi/templates/project/: cookiecutter.json
manage_fastapi/templates/project/hooks/: post_gen_project.py
manage_fastapi/templates/project/{{ cookiecutter.folder_name }}/: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.toml  {{ cookiecutter.env }}
manage_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/: __init__.py  actions.py  config.py  database.py  main.py  types.py
manage_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/core/: config.py
manage_fastapi/templates/project/{{ cookiecutter.folder_name }}/app/routes/: auth.py
manage_fastapi/templates/project/{{ cookiecutter.name }}/: pyproject.toml
manage_fastapi/tests/: test_utils_runserver.py  test_utils_showmodels.py  test_utils_startapp.py  test_utils_startproject.py  test_version.py
potato/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yaml  pyproject.toml
potato/app/: config.py  dynos.py  main.py  models.py
potato/tests/: test_bearer.py
release-notes/: index.html
scripts/: check_typing.sh
search/: search_index.json
tests/: conftest.py  test_manage_fastapi.py  test_routes.py  test_startapp.py  test_startproject.py  test_utils_runserver.py  test_utils_showmodels.py  test_utils_startapp.py  test_utils_startproject.py  test_version.py
