[tool.poetry]
authors = [
  "ycd <yagizcanilbey1903@gmail.com>",
  "Marcelo Trylesinski <marcelotryle@gmail.com>",
]
description = "Managing FastAPI projects made easy."
homepage = "https://github.com/ycd/manage-fastapi"
license = "MIT"
name = "manage-fastapi"
readme = "README.md"
repository = "https://github.com/ycd/manage-fastapi"
version = "1.1.1"

classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
cookiecutter = "^1.7.2"
pydantic = {extras = ["email"], version = "^1.7.2"}
python = "^3.6.1"
questionary = "^1.10.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^4.0.1"
isort = "^5.10"
mypy = "^0.971"
pre-commit = "^2.17.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
fastapi = 'manage_fastapi.main:app'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
