[tool.poetry]
name = "{{ cookiecutter.name }}"
version = "0.1.0"
description = ""
{% if cookiecutter.username != None %}authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]{% endif %}

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python }}"
fastapi = "^{{ cookiecutter.fastapi }}"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
